# dataroute

./: .gitignore  README.md  dsl_output.json  pyproject.toml  result.json  setup.py  test.dtrt  test_vars_example.dtrt  test_void_type.dtrt
.cursor/rules/: always.mdc  pythonrule.mdc
NOTES/: 01_lark.md  02_pydantic.md  03_sqlalchemy.md  dataroute_parser.md  ОПИСАНИЕ.txt  Пример.txt
NOTES/for_test/: 1.py  2.txt  dtrt_compiler.py  lark_calculator.py
NOTES/jsons/: 1.json
docs/: 04_asyncpg.md  conditions_ru.md  dataroute.md  dataroute_parser.md  ОПИСАНИЕ.txt  Пример.txt
my_funcs/: get_finishing.py  get_flats_type_uuid.py  get_tag_by_type.py  get_uuid_real_estate_type.py
my_vars/: mv.json  myvars.json
src/dataroute/: __init__.py  _impl.py  ast_nodes.py  config.py  constants.py  core.py  dataroute.py  dtrt_all.py  errors.py  json_generator.py  lexer.py  localization.py  mess_core.py  parser.py  test_dsl.py  test_errors.py
src/dsl_compiler/: _impl.py  ast_nodes.py  constants.py  errors.py  json_generator.py  lexer.py  localization.py  mess_core.py  parser.py
src/dtrt_lang/: __init__.py
src/generator/: __init__.py
src/generator/python/: config.py  dtrt_runner.py  exeptions.py
src/generator/python/notifiers/: console_notifier.py
src/generator/python/pipeline/: __init__.py  pipeline_builder.py  pipeline_executor.py  pipeline_step.py
src/generator/python/source_getters/: pydict_source_getter.py
src/generator/python/target_writers/: pg_target_writer.py
src/std_func/python/: func1.py  get.py  get_uuid.py  s1.py
t/: 1.py  2.py  3 copy.py  3.py  dtrt_all.py  result.json  test1.py  test_external_vars.py  test_globals.py  test_params.py  test_prevar.py  триггер на вставку.txt
t/my_funcs/: get_finishing.py  get_flats_type_uuid.py  get_tag_by_type.py  get_uuid_real_estate_type.py
t/my_vars/: mv.json  myvars.json
test_vars/: app.json  config.json  database.json
tests/: __init__.py  conftest.py  test_base_syntax.py  test_base_syntax_errors.py  test_core.py
tests/ext_funcs/: get_finishing.py  get_flats_type_uuid.py  get_tag_by_type.py  get_uuid_real_estate_type.py
tests/ext_vars/: myvars.json
