[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataroute"
version = "0.1.0"
description = "Декларативный язык программирования для построения пайплайнов обработки данных"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "DataRoute"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.32",
    "lark~=1.2",
    ""
]

[project.urls]
"Homepage" = "https://github.com/1SKcode/dataroute"
"Bug Tracker" = "https://github.com/1SKcode/dataroute/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataroute"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 