[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataroute"
version = "0.1.0"
description = "Гибкая ETL-система на Python с собственным DSL для построения маршрутов и трансформаций данных."
authors = [{name = "Alexander K.", email = "ip387525@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = ""
BugTracker = ""

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dataroute", "dtrt_lang", "generator"] 